# SteamTestApp

./: .gitignore  Dockerfile  Olecheon_gamez.txt  README.md  SpartanPlaya_gamez.txt  db.Dockerfile  docker-compose.yml  pyproject.toml  query.txt  test.txt
api/: main.py  schema.py  settings.py
api/database/: create_graph.py  games_dao.py  session.py
api/services/: games_service.py  steam_service.py
api/types/: steam_types.py
go-api/: Dockerfile  go.mod  go.sum  gqlgen.yml  server.go
go-api/dataloaders/: company.go  dataloaders.go  game.go  genre.go
go-api/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
go-api/graph/model/: game.go  genre.go  models_gen.go  user.go
go-api/helpers/: game_service.go  user_service.go
go-api/models/: user.go
steam-fe/: package-lock.json  package.json
